Fix preview on tablet

--- a/source/sass/blocks/preview.scss
+++ b/source/sass/blocks/preview.scss
@@ -89,7 +89,7 @@
 
   .preview__download {
     position: absolute;
-    top: 488px;
+    top: 378px;
     left: 50%;
 
     transform: translateX(-103%);
@@ -134,7 +134,6 @@
 
   .preview__download {
     top: 450px;
-    left: 50%;
 
     transform: translateX(-157%);
   }
